fix(minecraft): repair misplaced ender air migration